manifests/dashboards/traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external-dashboard
  labels:
    app.kubernetes.io/name: traefik-external-dashboard
    app.kubernetes.io/instance: traefik-external-dashboard
    app.kubernetes.io/managed-by: ArgoCD
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.lvh.me`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      services:
        - kind: TraefikService
          name: api@internal
